general/gallery-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gallery-front-ingress
  namespace: gallery
spec:
  ingressClassName: nginx
  rules:
    - host: gallery.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gallery-front
                port:
                  number: 80
    - host: localstack
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localstack
                port:
                  number: 80
    - host: mongo-express.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
    - host: kafka-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
